--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-paginate": "^7.1.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
+    "react-scroll-to-top": "^1.0.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.0"
